minor updates on logo

--- a/CabbageFriends/index.html
+++ b/CabbageFriends/index.html
@@ -92,13 +92,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Cabbage Friends</a>
+        <a class="navbar-brand" href="index.html"><img src="./img/logo.svg" width="75" height="75" alt=""></a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="reservation.html">Reservation</a></li>
           <li><a href="list.html">List</a></li>
           <li><a href="login.html">Log In</a></li>
+
         </ul>
       </div>
       <!--/.nav-collapse -->
