--- a/CabbageFriends/login.html
+++ b/CabbageFriends/login.html
@@ -1,4 +1,4 @@
-<!DOXTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
       <title>LOGIN</title>
@@ -59,9 +59,9 @@
               background-size: cover;
             color:white;
         }
-        #welcome{
-            font: ;
-        }
+	    #welcome{
+		    font: larger;
+	    }
 
     </style>
 
@@ -70,7 +70,7 @@
 
 	<!-- The surrounding HTML is left untouched by FirebaseUI.
      Your app may use that space for branding, controls and other customizations.-->
-	<h1 id="welcome">Welcome to Cabbage Friends</h1>
+	<h1 id="welcome">Welcome to Cabbage Friends<br></h1>
 	<div id="firebaseui-auth-container"></div>
 	<div id="loader">Loading...</div>
 
