--- a/CabbageFriends/login.html
+++ b/CabbageFriends/login.html
@@ -70,8 +70,12 @@
 
 	<!-- The surrounding HTML is left untouched by FirebaseUI.
      Your app may use that space for branding, controls and other customizations.-->
-	<h1 id="welcome">Welcome to Cabbage Friends<br></h1>
+	<h1 id="welcome">Welcome to Cabbage Friends</h1>
+    <br>
+    <br>
 	<div id="firebaseui-auth-container"></div>
+    <br>
+    <br>
 	<div id="loader">Loading...</div>
 
 	<script>
