--- a/CabbageFriends/index.html
+++ b/CabbageFriends/index.html
@@ -69,6 +69,10 @@
             font-size: 60px;
           }
         }
+        img.img-responsive{
+            height: 240px;
+            width: 360px;
+        }
 
     </style>
 </head>
@@ -84,13 +88,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html"><img src="./img/logo.svg" width="75" height="75" alt=""></a>
+        <a class="navbar-brand" href="index.html"><img id="logo" src="./images/logo.svg" width="75" height="75" alt=""></a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="reservation.html">Reservation</a></li>
-          <li><a href="list.html">List</a></li>
-          <li><a href="login.html">Log In</a></li>
+          <li><a href="list.html">Farm List</a></li>
+            <li><a href="myinfo.html">My info</a></li>
+          <li><a href="login.html">Login</a></li>
 
         </ul>
       </div>
@@ -174,10 +179,10 @@
         </div>
         <div class="col-lg-2"></div>
         <div class="col-lg-3 team">
-          <img class="img-circle" src="images/dummy.jpg" height="90" width="90">
+          <img class="img-circle" src="./images/lucas.png" height="90" width="90">
           <h4>Lucas Gong</h4>
           <h5><i>Front-end Developer</i></h5>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          <p>I want to reduce the disposal of Kimchi-cabbages in Haenam.</p>
           <p>
             <a href="index.html#"><i class="fa fa-facebook"></i></a>
             <a href="index.html#"><i class="fa fa-twitter"></i></a>
