update for sprint1

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -19,7 +19,7 @@
           <img src="./pictures/logo.svg" width="75" height="75" alt="">
         </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-			<span class="navbar-toggler-icon"></span>
+			<span class="fa fa-battery-full"></span>
         </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
 			
