--- a/CabbageFriends/index.html
+++ b/CabbageFriends/index.html
@@ -8,14 +8,15 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="./imgs/logo.png" rel="icon">
+  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -23,20 +24,12 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Template Name: Stanley
-    Template URL: https://templatemag.com/stanley-bootstrap-freelancer-template/
-    Author: TemplateMag.com
-    License: https://templatemag.com/license/
-  ======================================================= -->
     
     <style>
-        /* ==========================================================================
-   Wrap Sections
-   ========================================================================== */
+
 
 #headerwrap {
-  background: url(./images/bg.jpg) no-repeat center top;
+  background: url(./imgs/bg.jpg) no-repeat center top;
   margin-top: -10px;
   padding-top: 20px;
   text-align: center;
@@ -55,9 +48,9 @@
 }
 
 #headerwrap h1 {
-  margin-top: 130px;
+  /*margin-top: 130px;*/
   color: white;
-  font-size: 140px;
+  font-size: 100px;
   font-weight: 700;
   letter-spacing: 3px;
 }
@@ -84,35 +77,48 @@
 <body>
 
   <!-- Static navbar -->
-  <div class="navbar navbar-inverse navbar-static-top">
+  <nav class="navbar navbar-light bg-light navbar-static-top">
     <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html"><img src="./img/logo.svg" width="75" height="75" alt=""></a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="reservation.html">Reservation</a></li>
-          <li><a href="list.html">List</a></li>
-          <li><a href="login.html">Log In</a></li>
-
+			
+        
+      <a class="navbar-brand" href="index.html">
+				<img src="./imgs/logo.svg" width="75" height="75" alt="">
+			</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+			<span class="navbar-toggler-icon"></span>
+      </button>
+			
+      <div class="collapse navbar-collapse " id="navbarResponsive">
+      	<ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home
+                <span class="sr-only">(current)</span>
+              </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Reservation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">List</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">Login</a>
+        </li>
         </ul>
       </div>
       <!--/.nav-collapse -->
     </div>
-  </div>
+  </nav>
 
   <!-- ========== HEADER SECTION ========== -->
   <section id="home" name="home"></section>
   <div id="headerwrap">
     <div class="container">
       <br>
-      <h1>Cabbage Friends</h1>
+      <h1>Cabbage <br> Friends</h1>
+			<!--
       <h2>Revolutionary Kimchi-Cabbages Reservation System</h2>
+			-->
       <div class="row">
         <br>
         <br>
@@ -131,30 +137,30 @@
   <div class="container pt">
     <div class="row mt centered">
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port01.jpg" alt="" /></a>
+        <a href="#"><img class="img-responsive" src="imgs/dummy.png" alt="" /></a>
         <p>Farm 1</p>
       </div>
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port02.jpg" alt="" /></a>
+        <a href="#"><img class="img-responsive" src="imgs/dummy.png" alt="" /></a>
         <p>Farm 2</p>
       </div>
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port03.jpg" alt="" /></a>
+        <a href="#"><img class="img-responsive" src="imgs/dummy.png" alt="" /></a>
         <p>Farm 3</p>
       </div>
     </div>
     <!-- /row -->
     <div class="row mt centered">
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port04.jpg" alt="" /></a>
+        <a href="#"><img class="img-responsive" src="imgs/dummy.png" alt="" /></a>
         <p>Farm 4</p>
       </div>
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port05.jpg" alt="" /></a>
+        <a href="#"><img class="img-responsive" src="imgs/dummy.png" alt="" /></a>
         <p>Farm 5</p>
       </div>
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port06.jpg" alt="" /></a>
+        <a href="#"><img class="img-responsive" src="imgs/dummy.png" alt="" /></a>
         <p>Farm 6</p>
       </div>
     </div>
@@ -182,7 +188,7 @@
         </div>
         <div class="col-lg-2"></div>
         <div class="col-lg-3 team">
-          <img class="img-circle" src="images/dummy.jpg" height="90" width="90">
+          <img class="img-circle" src="images/bg.jpg" height="90" width="90">
           <h4>Lucas Gong</h4>
           <h5><i>Front-end Developer</i></h5>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -244,5 +250,10 @@
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
 
+	    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
